tests/snapshots/parsing__mutations-4.snap
---
source: tests/parsing.rs
expression: "kiss_srt::to_string(&removed)"
---
1
00:02:34,567 --> 00:03:00,000
3
00:00:00,000 --> 11:11:11,111
^^ Wow. That looks a lot like a subtitle, but it isn't

