tests/snapshots/parsing__mutations.snap
---
source: tests/parsing.rs
expression: "kiss_srt::to_string(&increase)"
---
1
00:00:00,100 --> 00:01:23,556
This is some sample
text

2
00:02:34,667 --> 00:03:00,100
3
00:00:00,000 --> 11:11:11,111
^^ Wow. That looks a lot like a subtitle, but it isn't

